--- a/heifconverter/build.gradle
+++ b/heifconverter/build.gradle
@@ -22,7 +22,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
 }
 
 dependencies {
@@ -34,6 +33,14 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation 'org.mp4parser:isoparser:1.9.41'
+    // Parsing
+    def parser_version = "1.9.41"
+    implementation "org.mp4parser:isoparser:$parser_version"
+    implementation "org.slf4j:slf4j-simple:1.6.1"
+
+    // Coroutines
+    def coroutines_version = "1.3.7"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
 }
